@@ -43,7 +43,6 @@ check.dependsOn 'checkstyle','ktlint'
 task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
-    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
     mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "src/**/*.kt"
     ignoreExitValue true
